cmake_minimum_required (VERSION 2.8)
project (Graphfab)

install(FILES 32x32/document-new-8.png 32x32/document-open-7.png 32x32/document-save-5.png 32x32/document-save-as-5.png 32x32/application-exit-5.png 32x32/help-about-2.png 32x32/view-refresh-3.png 32x32/draw-eraser-2.png 32x32/lock.png 32x32/draw-freehand.png 32x32/insert-link-2.png 32x32/homepage.png 32x32/gnome-iagno.png 32x32/system-settings.png 32x32/document-new-8@2x.png 32x32/document-open-7@2x.png 32x32/document-save-5@2x.png 32x32/document-save-as-5@2x.png 32x32/application-exit-5@2x.png 32x32/help-about-2@2x.png 32x32/select.png 32x32/select@2x.png 32x32/view-refresh-3@2x.png 32x32/draw-eraser-2@2x.png 32x32/lock@2x.png 32x32/draw-freehand@2x.png 32x32/insert-link-2@2x.png 32x32/homepage.png 32x32/gnome-iagno.png 32x32/system-settings@2x.png 32x32/applications-multimedia-3.png 32x32/applications-multimedia-3@2x.png DESTINATION icons/32x32)
if(SBNW_SPYDER_DIST)
install(FILES 32x32/document-new-8.png 32x32/document-open-7.png 32x32/document-save-5.png 32x32/document-save-as-5.png 32x32/application-exit-5.png 32x32/help-about-2.png 32x32/view-refresh-3.png 32x32/draw-eraser-2.png 32x32/lock.png 32x32/draw-freehand.png 32x32/insert-link-2.png 32x32/homepage.png 32x32/gnome-iagno.png 32x32/system-settings.png 32x32/document-new-8@2x.png 32x32/document-open-7@2x.png 32x32/document-save-5@2x.png 32x32/document-save-as-5@2x.png 32x32/application-exit-5@2x.png 32x32/help-about-2@2x.png 32x32/select.png 32x32/select@2x.png 32x32/view-refresh-3@2x.png 32x32/draw-eraser-2@2x.png 32x32/lock@2x.png 32x32/draw-freehand@2x.png 32x32/insert-link-2@2x.png 32x32/homepage.png 32x32/gnome-iagno.png 32x32/system-settings@2x.png 32x32/applications-multimedia-3.png 32x32/applications-multimedia-3@2x.png DESTINATION python2/spyderplugins/pyfab-assets/icons/32x32)
endif()
