cmake_minimum_required (VERSION 2.8)
project (SagittariusSandbox)

configure_file(basic_python.py basic_python.py COPYONLY)

if(SBNW_SPYDER_DIST)
  install(FILES pyfab_app.py DESTINATION python2/site-packages)
  install(FILES pyfab_qt_render.py DESTINATION python2/site-packages)
  install(FILES pyfab_matplotlib_render.py DESTINATION python2/site-packages)
  install(FILES nwed.py DESTINATION python2/site-packages)
  install(FILES pyfab_cfg.py DESTINATION python2/site-packages)
  install(FILES setup.py DESTINATION python2/site-packages)
endif()
if(PYTHONINTERP_FOUND)
#   install(FILES pyfab_app.py DESTINATION python/site-packages)
#   install(FILES pyfab_qt_render.py DESTINATION python/site-packages)
#   install(FILES pyfab_matplotlib_render.py DESTINATION python/site-packages)
#   install(FILES nwed.py DESTINATION python/site-packages)
#   install(FILES pyfab_cfg.py DESTINATION python/site-packages)
endif()