cmake_minimum_required (VERSION 2.8)
project (SagittariusSandbox)

configure_file(basic_python.py basic_python.py COPYONLY)

# dist
# install(FILES basic_python.py DESTINATION bin)
# install(FILES pyqt_layout.py pyqt5_layout.py DESTINATION bin)
# install(FILES pyqt5_cubic.py DESTINATION bin)
# install(FILES pyfab_app.py DESTINATION bin)
# install(FILES pyfab_qt_render.py DESTINATION bin)
# install(FILES pyfab_matplotlib_render.py DESTINATION bin)
if(SBNW_SPYDER_DIST)
  install(FILES pyfab_app.py DESTINATION python2/site-packages)
  install(FILES pyfab_qt_render.py DESTINATION python2/site-packages)
  install(FILES pyfab_matplotlib_render.py DESTINATION python2/site-packages)
  install(FILES nwed.py DESTINATION python2/site-packages)
  install(FILES pyfab_cfg.py DESTINATION python2/site-packages)
  install(FILES setup.py DESTINATION python2/site-packages)
endif()
if(ENABLE_PYTHON3_BINDINGS)
  install(FILES pyfab_app.py DESTINATION python3/site-packages)
  install(FILES pyfab_qt_render.py DESTINATION python3/site-packages)
  install(FILES pyfab_matplotlib_render.py DESTINATION python3/site-packages)
  install(FILES nwed.py DESTINATION python3/site-packages)
  install(FILES pyfab_cfg.py DESTINATION python3/site-packages)
endif()